Первичная наброска разметки

--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,123 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
+    <header>
+      <img src="#" alt="#">
+      <button class="btn btn-burger" type="button"></button>
+      <ul>
+        <li><a href="catalog.html">Каталог товаров</a></li>
+        <li><a href="#">Вязание на заказ</a></li>
+        <li><a href="#">Поиск по сайту</a></li>
+        <li><a href="#">Корзина: пока пуста</a></li>
+      </ul>
+    </header>
+    <main>
+      <div>
+        <img src="#" alt="#">
+        <h1>Милые штуки ручной  работы для дома</h1>
+      </div>
+      <section>
+        <div>
+          <p>Предметы  интерьера</p>
+        </div>
+        <div>
+          <p>Детские  игрушки</p>
+        </div>
+      </section>
+      <section>
+        <span>
+          <h3>Вязаные корзинки</h3>
+          <h6>ТОВАР НЕДЕЛИ</h6>
+        </span>
+        <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table>
+          <tr>
+            <th>Цвет:</th>
+            <td>«Тиффани»/серый</td>
+          </tr>
+          <tr>
+            <th>Диаметр:</th>
+            <td>25 см</td>
+          </tr>
+          <tr>
+            <th>Высота:</th>
+            <td>15 см</td>
+          </tr>
+        </table>
+        <img src="#" alt="#">
+        <p>Цена: 990 руб.</p>
+        <a href="#">ЗАКАЗАТЬ</a>
+      </section>
+      <section>
+        <h3>Коротко о нас:</h3>
+        <ul>
+          <li>Экологически  чистые материалы</li>
+          <li>Скандинавский стиль  по российской цене</li>
+          <li>Увеличивает лайки на фотографиях</li>
+          <li>Связано вручную с  любовью и умилением</li>
+          <li>Поддержка отечественного производителя</li>
+          <li>Поставляется в  подарочной упаковке</li>
+        </ul>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+        <div>
+          <h3>Отзывы</h3>
+          <blockquote>
+            <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными а также набирают больше лайков!
+            </p>
+            <b>Анастасия Красильникова</b>
+            <a href="#">@misssssiskras</a>
+          </blockquote>
+          <div class="btn-container">
+            <button class="btn btn__feedback" type="button">Туда</button>
+            <button class="btn btn__feedback" type="button">Сюда</button>
+          </div>
+        </div>
+      </section>
 
+      <section>
+        <div>
+          <h3>Контакты</h3>
+          <table>
+            <tr>
+              <th>e-mail:</th>
+              <td>info@mimimishkashop.ru</td>
+            </tr>
+            <tr>
+              <th>адрес:</th>
+              <td>г. Санкт-Петербург, ул. Большая Конюшенная, д 19/8 офис 101</td>
+            </tr>
+          </table>
+          <a href="#"><img src="#" alt="#"></a>
+          <div>
+            <a class="btn" href="feedback.html">Напишите нам</a>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <li><a class="social-btn social-btn-inst" target="_blank" href="https://www.instagram.com/htmlacademy/">instagram</a></li>
+        <li><a class="social-btn social-btn-fb" target="_blank" href="https://www.facebook.com/htmlacademy">facebook</a></li>
+        <li><a class="social-btn social-btn-twit" target="_blank" href="https://twitter.com/htmlacademy_ru">twiter</a></li>
+      </ul>
+      <span>
+        <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="#" alt="#"></a>
+      </span>
+    </footer>
+
+    <div class="popup">
+      <h3>Добавить  в корзину</h3>
+      <p>Выберите размер:</p>
+      <dl>
+        <dt>S</dt>
+        <dd>Маленький</dd>
+        <dt>M</dt>
+        <dd>Средний</dd>
+        <dt>L</dt>
+        <dd>Большой</dd>
+      </dl>
+      <a href="cart.html"></a>
+    </div>
   </body>
 </html>
