--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="fonts/opensansregular.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensansmedium.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensansregular.woff" type="font/woff" rel="preload">
+    <link href="fonts/opensansmedium.woff" type="font/woff" rel="preload">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>HTML Academy: Мишка -Предлагаем народное искуство! "Налитай, торопись! Раскупай живопись!"</title>
   </head>
   <body>
     <header>
       <a href="index.html"><img src="#" alt="#"></a>
       <button class="btn btn-burger" type="button"></button>
       <ul>
-        <li><a href="catalog.html">Каталог товаров</a></li>
-        <li><a href="#">Вязание на заказ</a></li>
+        <li><a href="#">Каталог товаров</a></li>
+        <li><a href="form.html">Вязание на заказ</a></li>
         <li><a href="#">Поиск по сайту</a></li>
         <li><a href="#">Корзина: пока пуста</a></li>
       </ul>
