--- a/source/form.html
+++ b/source/form.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-  </head>
+  <html lang="ru">
+    <head>
+      <meta charset="utf-8">
+      <link href="css/style.css" rel="stylesheet">
+      <link href="fonts/opensansregular.woff2" type="font/woff2" rel="preload" as="font">
+      <link href="fonts/opensansmedium.woff2" type="font/woff2" rel="preload" as="font">
+      <link href="fonts/opensansregular.woff" type="font/woff" rel="preload">
+      <link href="fonts/opensansmedium.woff" type="font/woff" rel="preload">
+      <meta name="format-detection" content="telephone=no">
+      <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>HTML Academy: Мишка - Форма заказки/выгрузки/загрузки/затаривания/заваривания/наваривания и других эпитетов</title>
+    </head>
   <body>
     <header>
       <a href="index.html"><img src="#" alt="#"></a>
