--- a/source/index.html
+++ b/source/index.html
@@ -1,71 +1,93 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+  <head class="header">
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="fonts/opensansregular.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensansmedium.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensansregular.woff" type="font/woff" rel="preload">
+    <link href="fonts/opensansmedium.woff" type="font/woff" rel="preload">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
   </head>
-  <body>
-    <header>
-      <img src="#" alt="#">
-      <button class="btn btn-burger" type="button"></button>
-      <ul>
+  <body class="body">
+    <header class="header">
+      <div class="logo-wrapper">
+        <img class="header__logo" src="#" alt="Мишка. Магазин вещей, сделанных врукопашную!">
+        <button class="btn btn-burger" type="button"></button>
+      </div>
+      <ul class="header__nav list">
         <li><a href="catalog.html">Каталог товаров</a></li>
-        <li><a href="#">Вязание на заказ</a></li>
+        <li><a href="form.html">Вязание на заказ</a></li>
+      </ul>
+      <ul class="header__nav list">
         <li><a href="#">Поиск по сайту</a></li>
         <li><a href="#">Корзина: пока пуста</a></li>
       </ul>
     </header>
-    <main>
-      <div>
-        <img src="#" alt="#">
-        <h1>Милые штуки ручной  работы для дома</h1>
+
+    <main class="main">
+      <div class="main__theme-site">
+        <ul class="theme-site__list list">
+          <li>Новые поступления</li>
+          <li>Распродажа</li>
+        </ul>
+        <ul class="theme-site__list list">
+          <li>Бесплатная доставка по России</li>
+        </ul>
+        <h1 class="theme-site__slogan">Милые штуки ручной  работы для дома</h1>
       </div>
-      <section>
-        <div>
-          <p>Предметы  интерьера</p>
+      <section class="main__category">
+        <div class="category category--01">
+          <p class="category--text">Предметы  интерьера</p>
         </div>
-        <div>
-          <p>Детские  игрушки</p>
+        <div class="category category--02">
+          <p class="category--text">Детские  игрушки</p>
         </div>
       </section>
-      <section>
-        <span>
-          <h3>Вязаные корзинки</h3>
-          <h6>ТОВАР НЕДЕЛИ</h6>
+
+      <section class="product">
+        <span class="product__name">
+          <h3 class="product__name--denotation">Вязаные корзинки</h3>
+          <h6 class="product__name--attribute">ТОВАР НЕДЕЛИ</h6>
         </span>
-        <p>Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-        <table>
-          <tr>
+        <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+        <table class="product__table">
+          <tr class="product__table--parameter1">
             <th>Цвет:</th>
             <td>«Тиффани»/серый</td>
           </tr>
-          <tr>
+          <tr class="product__table--parameter2">
             <th>Диаметр:</th>
             <td>25 см</td>
           </tr>
-          <tr>
+          <tr class="product__table--parameter3">
             <th>Высота:</th>
             <td>15 см</td>
           </tr>
         </table>
-        <img src="#" alt="#">
-        <p>Цена: 990 руб.</p>
-        <a href="#">ЗАКАЗАТЬ</a>
+        <img class=" product__table--img" src="#" alt="Вязанные корзинки разного диаметра">
+        <p class=" product__table--price">Цена: 990 руб.</p>
+        <a class="btn product__table--btn" href="cart.html">ЗАКАЗАТЬ</a>
       </section>
-      <section>
-        <h3>Коротко о нас:</h3>
-        <ul>
-          <li>Экологически  чистые материалы</li>
-          <li>Скандинавский стиль  по российской цене</li>
-          <li>Увеличивает лайки на фотографиях</li>
-          <li>Связано вручную с  любовью и умилением</li>
-          <li>Поддержка отечественного производителя</li>
-          <li>Поставляется в  подарочной упаковке</li>
-        </ul>
 
+      <section class="about-us">
         <div>
-          <h3>Отзывы</h3>
-          <blockquote>
+          <h3 class="about-us__title">Коротко о нас:</h3>
+          <ul class="about-us__features-list">
+            <li class="about-us">Экологически  чистые материалы</li>
+            <li class="about-us">Скандинавский стиль  по российской цене</li>
+            <li class="about-us">Увеличивает лайки на фотографиях</li>
+            <li class="about-us">Связано вручную с  любовью и умилением</li>
+            <li class="about-us">Поддержка отечественного производителя</li>
+            <li class="about-us">Поставляется в  подарочной упаковке</li>
+          </ul>
+        </div>
+        <div class="about-us">
+          <h3 class="about-us__title">Отзывы</h3>
+          <blockquote class="about-us__comment">
             <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными а также набирают больше лайков!
             </p>
             <b>Анастасия Красильникова</b>
@@ -93,19 +115,20 @@
           </table>
           <a href="#"><img src="#" alt="#"></a>
           <div>
-            <a class="btn" href="feedback.html">Напишите нам</a>
+            <a class="btn" href="write-us.html">Напишите нам</a>
           </div>
         </div>
       </section>
     </main>
 
-    <footer>
-      <ul>
+    <footer class="footer">
+      <a class="footer__logo logo" href="#"><img src="img/*" alt="Магазин Мишка"></a>
+      <ul class="footer__social">
         <li><a class="social-btn social-btn-inst" target="_blank" href="https://www.instagram.com/htmlacademy/">instagram</a></li>
         <li><a class="social-btn social-btn-fb" target="_blank" href="https://www.facebook.com/htmlacademy">facebook</a></li>
         <li><a class="social-btn social-btn-twit" target="_blank" href="https://twitter.com/htmlacademy_ru">twiter</a></li>
       </ul>
-      <span>
+      <span class="footer__copyright">
         <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="#" alt="#"></a>
       </span>
     </footer>
