--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="#" alt="#"></a>
+      <a href="index.html"><img src="#" alt="Мишка. Магазин вещей, сделанных врукопашную!"></a>
       <button class="btn btn-burger" type="button"></button>
       <ul>
         <li><a href="#">Каталог товаров</a></li>
@@ -23,21 +23,21 @@
         <li><a href="#">Корзина: пока пуста</a></li>
       </ul>
     </header>
-    <main>
-      <h1>Каталог товаров</h1>
-      <div class="catalog">
-        <div>
-          <img src="img/#" alt="#">
-          <div>
-            <h6>Зайчик-попрыгайчик</h6>
-            <p>Рост 30 см, вес 200 г</p>
-            <hr>
-            <span>1 200 руб.</span>
+    <main class="main">
+      <h1 class="main__title">Каталог товаров</h1>
+      <div class="main__catalog catalog">
+        <div class="catalog__cart">
+          <img class="cart__img" src="img/#" alt="Ушастый лушпай, у которого отняли морковку вегатериацы.">
+          <div class="cart__description">
+            <h6 class="cart__title">Зайчик-попрыгайчик</h6>
+            <p class="cart__characteristics">Рост 30 см, вес 200 г</p>
+            <hr class="cart__hr">
+            <span class="cart__price">1 200 руб.</span>
           </div>
         </div>
 
         <div>
-          <img src="img/#" alt="#">
+          <img src="img/#" alt="Вязаный тазик, в который белье постельное не поместится. Разве что вертиканьно.">
           <div>
             <h6>Корзинка для белья</h6>
             <p>Диаметр 15 см, высота 10 см</p>
@@ -47,7 +47,7 @@
         </div>
 
         <div>
-          <img src="img/#" alt="#">
+          <img src="img/#" alt="Чуть меньше мусорки и покрасиве. Вы ведь не будете ставить мусорку себе на стол на видное место? А это - будете!">
           <div>
             <h6>Большая корзинка для игрушек</h6>
             <p>Диаметр 30 см, высота 30 см</p>
@@ -57,11 +57,11 @@
         </div>
       </div>
 
-      <section>
-        <h3>Процесс производства</h3>
-        <video src="img/#"></video>
-        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-        <a href="cart.html">Сделать заказ</a>
+      <section class="main__manufacturing">
+        <h3 class="manufacturing__title">Процесс производства</h3>
+        <video class="manufacturing__video" src="img/#"></video>
+        <p class="manufacturing__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+        <a class="manufacturing__btn btn" href="cart.html">Сделать заказ</a>
       </section>
     </main>
 
