--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
   <html lang="ru">
     <head>
       <meta charset="utf-8">
@@ -15,7 +14,7 @@
     </head>
   <body>
     <header>
-      <a href="index.html"><img src="#" alt="#"></a>
+      <a href="index.html"><img src="#" alt="Мишка. Магазин вещей, сделанных врукопашную!"></a>
       <button class="btn btn-burger" type="button"></button>
       <ul>
         <li><a href="catalog.html">Каталог товаров</a></li>
@@ -24,59 +23,59 @@
         <li><a href="#">Корзина: пока пуста</a></li>
       </ul>
     </header>
-    <main>
-      <h1>Вязание на заказ</h1>
-      <form action="post">
-        <p>Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
-        <fieldset>
-          <legend>Тип</legend>
-          <label><input type="radio">Аксессуар для  интерьера</label>
-          <label><input type="radio">Детская игрушка</label>
+    <main class="main">
+      <h1 class="main__title">Вязание на заказ</h1>
+      <form class="main__form form" action="post">
+        <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">Тип</legend>
+          <label><input class="form__radio" type="radio" checked>Аксессуар для  интерьера</label>
+          <label><input class="form__radio" type="radio">Детская игрушка</label>
         </fieldset>
 
-        <fieldset>
-          <legend>ЦВет</legend>
-          <label><input type="checkbox" checked>Белый</label>
-          <label><input type="checkbox" checked>Серый</label>
-          <label><input type="checkbox">«Тиффани»</label>
-          <label><input type="checkbox">Черный</label>
-          <label><input type="checkbox">Розовый</label>
-          <label><input type="checkbox">Оранжевый</label>
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">Цвет</legend>
+          <label><input class="form__input" type="checkbox" checked>Белый</label>
+          <label><input class="form__input" type="checkbox" checked>Серый</label>
+          <label><input class="form__input" type="checkbox">«Тиффани»</label>
+          <label><input class="form__input" type="checkbox">Черный</label>
+          <label><input class="form__input" type="checkbox">Розовый</label>
+          <label><input class="form__input" type="checkbox">Оранжевый</label>
         </fieldset>
 
-        <fieldset>
-          <legend>ФИО</legend>
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">ФИО</legend>
           <label class="in-popup-form">Имя:
-            <input type="text" name="name" placeholder="Введите ваше имя*" required>
+            <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" required>
           </label>
           <label class="in-popup-form">Фамилия:
-            <input type="text" name="name" placeholder="Укажите фамилию*" required>
+            <input class="form__input-text" type="text" name="name" placeholder="Укажите фамилию*" required>
           </label>
           <label class="in-popup-form">Отчество:
-            <input type="text" name="name" placeholder="Отчество, если желаете" required>
+            <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете">
           </label>
         </fieldset>
 
-        <fieldset>
-          <legend>тел</legend>
-          <label><input type="tel" id="phone" name="phone"
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">тел</legend>
+          <label><input class="form__input-text" type="tel" id="phone" name="phone"
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+7 ХХХ ХХХ ХХ ХХ*"
             required></label>
         </fieldset>
 
-        <fieldset>
-          <legend>E-mail</legend>
-          <label><input type="email" placeholder="Ваш Email*" required></label>
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">E-mail</legend>
+          <label><input class="form__input-text" type="email" placeholder="Ваш Email*" required></label>
         </fieldset>
 
-        <fieldset>
-          <legend>Доп</legend>
+        <fieldset class="form__fieldset">
+          <legend class="form__fiealdset-legend">Доп</legend>
           <label>Текст письма:
-              <textarea name="emailtext" rows="3" cols="40" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__input-text" name="text" rows="3" cols="40" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
         </fieldset>
-        <span>*Поля обязательны для заполнения</span>
-        <button type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
+        <span class="form__note">*Поля обязательны для заполнения</span>
+        <button class="form__btn btn" type="submit">ОТПРАВИТЬ ЗАКАЗ</button>
       </form>
     </main>
     <footer>
