--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head class="header">
+  <head>
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
     <link href="fonts/opensansregular.woff2" type="font/woff2" rel="preload" as="font">
@@ -12,98 +12,99 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>HTML Academy: Мишка</title>
   </head>
-  <body class="body">
+  <body>
     <header class="header">
       <div class="logo-wrapper">
         <img class="header__logo" src="#" alt="Мишка. Магазин вещей, сделанных врукопашную!">
         <button class="btn btn-burger" type="button"></button>
       </div>
-      <ul class="header__nav list">
+      <ul class="header__nav nav">
         <li><a class="nav__item" href="catalog.html">Каталог товаров</a></li>
         <li><a class="nav__item" href="form.html">Вязание на заказ</a></li>
       </ul>
-      <ul class="header__nav list">x
+      <ul class="header__nav nav">
         <li><a class="nav__item" href="serch.html">Поиск по сайту</a></li>
         <li><a class="nav__item" href="cart.html">Корзина: пока пуста</a></li>
       </ul>
     </header>
 
     <main class="main">
-      <div class="main__theme-site theme-site">
-        <ul class="theme-site__list list">
+      <div class="main__site-theme site-theme">
+        <ul class="site-theme__list">
           <li>Новые поступления</li>
           <li>Распродажа</li>
         </ul>
-        <ul class="theme-site__list list">
+        <ul class="site-theme__list">
           <li>Бесплатная доставка по России</li>
         </ul>
-        <h1 class="theme-site__slogan">Милые штуки ручной  работы для дома</h1>
+        <h1 class="site-theme__slogan">Милые штуки ручной  работы для дома</h1>
       </div>
       <section class="main__category category">
-        <div class="category--01">
-          <p class="category--text">Предметы  интерьера</p>
+        <h3 class="visually-hidden">категории изделий</h3>
+        <div class="category__item category__item--01">
+          <p>Предметы  интерьера</p>
         </div>
-        <div class="category--02">
-          <p class="category--text">Детские  игрушки</p>
+        <div class="category__item category__item--02">
+          <p>Детские  игрушки</p>
         </div>
       </section>
 
       <section class="product">
-        <span class="product__name">
-          <h3 class="product__name--denotation">Вязаные корзинки</h3>
-          <h6 class="product__name--attribute">Товар недели</h6>
-        </span>
+        <div class="product__name">
+          <h3 class="product__denotation">Вязаные корзинки</h3>
+          <h6 class="product__attribute">Товар недели</h6>
+        </div>
         <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
         <table class="product__table">
-          <tr class="product__table--parameter1">
+          <tr>
             <th>Цвет:</th>
             <td>«Тиффани»/серый</td>
           </tr>
-          <tr class="product__table--parameter2">
+          <tr>
             <th>Диаметр:</th>
             <td>25 см</td>
           </tr>
-          <tr class="product__table--parameter3">
+          <tr>
             <th>Высота:</th>
             <td>15 см</td>
           </tr>
         </table>
-        <img class=" product__table--img" src="#" alt="Вязанные корзинки разного диаметра">
-        <p class=" product__table--price">Цена: 990 руб.</p>
-        <a class="btn product__table--btn" href="cart.html">ЗАКАЗАТЬ</a>
+        <img class=" product__img" src="#" alt="Вязанные корзинки разного диаметра">
+        <p class=" product__price">Цена: 990 руб.</p>
+        <a class="btn product__btn" href="cart.html">ЗАКАЗАТЬ</a>
       </section>
 
       <section class="about-us">
-        <div>
-          <h3 class="about-us__title">Коротко о нас:</h3>
-          <ul class="about-us__features-list">
-            <li class="about-us">Экологически чистые материалы</li>
-            <li class="about-us">Скандинавский стиль  по российской цене</li>
-            <li class="about-us">Увеличивает лайки на фотографиях</li>
-            <li class="about-us">Связано вручную с  любовью и умилением</li>
-            <li class="about-us">Поддержка отечественного производителя</li>
-            <li class="about-us">Поставляется в  подарочной упаковке</li>
+        <div class="features">
+          <h3 class="features__title">Коротко о нас:</h3>
+          <ul class="features__list">
+            <li class="features__item features__item--eko">Экологически чистые материалы</li>
+            <li class="features__item features__item--suomi">Скандинавский стиль по российской цене</li>
+            <li class="features__item features__item--likes">Увеличивает лайки на фотографиях</li>
+            <li class="features__item features__item--with-love">Связано вручную с  любовью и умилением</li>
+            <li class="features__item features__item--support">Поддержка отечественного производителя</li>
+            <li class="features__item features__item--gift">Поставляется в подарочной упаковке</li>
           </ul>
         </div>
-        <div class="about-us">
-          <h3 class="about-us__title">Отзывы</h3>
-          <blockquote class="about-us__comment">
+        <div class="feedback">
+          <h3 class="feedback__title">Отзывы</h3>
+          <blockquote class="feedback__comment">
             <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными а также набирают больше лайков!
             </p>
             <b>Анастасия Красильникова</b>
             <a href="#">@misssssiskras</a>
           </blockquote>
-          <div class="btn-container">
-            <button class="btn btn__feedback" type="button">Туда</button>
-            <button class="btn btn__feedback" type="button">Сюда</button>
+          <div class="container-btn">
+            <button class="btn feedback__btn" type="button">Туда</button>
+            <button class="btn feedback__btn" type="button">Сюда</button>
           </div>
         </div>
       </section>
 
-      <section>
-        <div>
-          <h3>Контакты</h3>
-          <table>
+      <section class="contacts">
+        <div class="contacts__description">
+          <h3 class="contacts__title">Контакты</h3>
+          <table class="contacts__table">
             <tr>
               <th>e-mail:</th>
               <td>info@mimimishkashop.ru</td>
@@ -123,10 +124,10 @@
 
     <footer class="footer">
       <a class="footer__logo logo" href="#"><img src="img/*" alt="Магазин Мишка"></a>
-      <ul class="footer__social">
-        <li><a class="social-btn social-btn-inst" target="_blank" href="https://www.instagram.com/htmlacademy/">instagram</a></li>
-        <li><a class="social-btn social-btn-fb" target="_blank" href="https://www.facebook.com/htmlacademy">facebook</a></li>
-        <li><a class="social-btn social-btn-twit" target="_blank" href="https://twitter.com/htmlacademy_ru">twiter</a></li>
+      <ul class="footer__social social">
+        <li><a class="social__btn social__btn--inst" target="_blank" href="https://www.instagram.com/htmlacademy/">instagram</a></li>
+        <li><a class="social__btn social__btn--fb" target="_blank" href="https://www.facebook.com/htmlacademy">facebook</a></li>
+        <li><a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru">twiter</a></li>
       </ul>
       <span class="footer__copyright">
         <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="#" alt="Заходите на HTMLAcademy.ru"></a>
@@ -136,15 +137,12 @@
     <div class="popup">
       <h3 class="popup__title">Добавить  в корзину</h3>
       <p class="popup__text">Выберите размер:</p>
-      <dl class="popup__def-list">
-        <dt class="popup__def-title">S</dt>
-        <dd class="popup__def-discription">Маленький</dd>
-        <dt class="popup__def-title">M</dt>
-        <dd class="popup__def-discription">Средний</dd>
-        <dt class="popup__def-title">L</dt>
-        <dd class="popup__def-discription">Большой</dd>
-      </dl>
-      <a class="popu__btn btn" href="cart.html"></a>
+      <fieldset>
+        <label class="popup__checkbox-label" aria-label="Маленький"><input class="popup__checkbox" type="checkbox" checked>S</label>
+        <label class="popup__checkbox" aria-label="Средний"><input class="popup__checkbox-label" type="checkbox">M</label>
+        <label class="popup__checkbox" aria-label="Большой"><input class="popup__checkbox-label" type="checkbox">L</label>
+      </fieldset>
+      <a class="popup__btn btn" href="cart.html"></a>
     </div>
   </body>
 </html>
