Поправил параметры кнопки ПОП-АПа

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -91,7 +91,7 @@
         <label class="popup__checkbox" aria-label="Средний"><input class="popup__checkbox-label" type="checkbox">M</label>
         <label class="popup__checkbox" aria-label="Большой"><input class="popup__checkbox-label" type="checkbox">L</label>
       </form>
-      <button class="popup__btn btn" href="cart.html" form="popup-form"></button>
+      <button class="popup__btn btn" type="submit" form="popup-form"></button>
     </div>
   </body>
 </html>
