--- a/source/index.html
+++ b/source/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link href="css/style.css" rel="stylesheet">
-    <link href="fonts/opensansregular.woff2" type="font/woff2" rel="preload" as="font">
-    <link href="fonts/opensansmedium.woff2" type="font/woff2" rel="preload" as="font">
-    <link href="fonts/opensansregular.woff" type="font/woff" rel="preload">
-    <link href="fonts/opensansmedium.woff" type="font/woff" rel="preload">
+    <link href="fonts/opensans.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensanslight.woff2" type="font/woff2" rel="preload" as="font">
+    <link href="fonts/opensans.woff" type="font/woff" rel="preload">
+    <link href="fonts/opensanslight.woff" type="font/woff" rel="preload">
     <meta name="format-detection" content="telephone=no">
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
     <meta name="viewport" content="width=device-width,initial-scale=1">
