--- a/source/index.html
+++ b/source/index.html
@@ -38,6 +38,7 @@
           <li>Бесплатная доставка по России</li>
         </ul>
         <h1 class="site-theme__slogan">Милые штуки ручной  работы для дома</h1>
+        <img src="img/hero-mobile@1x.jpg" alt="Геройское размещение вязанных изделийв шкафчике на стене" width="575" height="373">
       </div>
       <section class="main__category category">
         <h3 class="visually-hidden">категории изделий</h3>
