Мелкие измения под стилизацию

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="logo-wrapper">
-        <img class="header__logo" src="#" alt="Мишка. Магазин вещей, сделанных врукопашную!">
+        <img class="header__logo" src="img/logo-mobile.svg" alt="Мишка. Магазин вещей, сделанных врукопашную!">
         <button class="btn btn-burger" type="button"></button>
       </div>
       <ul class="header__nav nav">
@@ -70,7 +70,7 @@
             <td>15 см</td>
           </tr>
         </table>
-        <img class=" product__img" src="#" alt="Вязанные корзинки разного диаметра">
+        <img class=" product__img" src="img/triple-set-mobile@1x.jpg" alt="Вязанные корзинки разного диаметра">
         <p class=" product__price">Цена: 990 руб.</p>
         <a class="btn product__btn" href="cart.html">ЗАКАЗАТЬ</a>
       </section>
@@ -115,7 +115,7 @@
               <td>г. Санкт-Петербург, ул. Большая Конюшенная, д 19/8 офис 101</td>
             </tr>
           </table>
-          <a href="#"><img src="#" alt="#"></a>
+          <a href="#"><img src="img/map-mobile@1x.jpg" alt="map"></a>
           <div>
             <a class="btn" href="write-us.html">Напишите нам</a>
           </div>
@@ -124,14 +124,14 @@
     </main>
 
     <footer class="footer">
-      <a class="footer__logo logo" href="#"><img src="img/*" alt="Магазин Мишка"></a>
+      <a class="footer__logo logo" href="#"><img src="img/logo-mobile.svg" alt="Магазин Мишка"></a>
       <ul class="footer__social social">
-        <li><a class="social__btn social__btn--inst" target="_blank" href="https://www.instagram.com/htmlacademy/">instagram</a></li>
-        <li><a class="social__btn social__btn--fb" target="_blank" href="https://www.facebook.com/htmlacademy">facebook</a></li>
-        <li><a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru">twiter</a></li>
+        <li><a class="social__btn social__btn--inst" target="_blank" href="https://www.instagram.com/htmlacademy/"><img src="img/icon-insta.svg" alt="instagram"></a></li>
+        <li><a class="social__btn social__btn--fb" target="_blank" href="https://www.facebook.com/htmlacademy"><img src="img/icon-fb.svg" alt="facebook"></a></li>
+        <li><a class="social__btn social__btn--twit" target="_blank" href="https://twitter.com/htmlacademy_ru"><img src="img/icon-twitter.svg" alt="twiter"></a></li>
       </ul>
       <span class="footer__copyright">
-        <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="#" alt="Заходите на HTMLAcademy.ru"></a>
+        <a href="https://htmlacademy.ru/intensive/adaptive">Разработано <img src="img/htmlacademy.svg" alt="Заходите на HTMLAcademy.ru" width="50" height="50"></a>
       </span>
     </footer>
 
