--- a/source/form.html
+++ b/source/form.html
@@ -29,7 +29,7 @@
     </header>
     <main class="main">
       <h1 class="main__title">Вязание на заказ</h1>
-      <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="form">
+      <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="form" accept-charset="utf-8">
         <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">Тип</legend>
@@ -75,7 +75,7 @@
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">Доп</legend>
           <label>Текст письма:
-              <textarea class="form__input-text" name="text" rows="3" cols="40" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+              <textarea class="form__input-text" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу"></textarea>
             </label>
         </fieldset>
         <span class="form__note">*Поля обязательны для заполнения</span>
