Правим разметку и пилим стилизацию

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -34,33 +34,45 @@
       <h1 class="main__title">Каталог товаров</h1>
       <div class="main__catalog catalog">
         <div class="catalog__card card">
-          <img class="card__img" src="img/photo-hare-mobile@1x.jpg" alt="Ушастый лушпай, у которого отняли морковку вегатериацы." width="260" height="195">
+          <a href="#">
+            <img class="card__img" src="img/photo-hare-mobile@1x.jpg" alt="Ушастый лушпай, у которого отняли морковку вегатериацы.">
+          </a>
           <div class="card__description">
             <h6 class="card__title">Зайчик-попрыгайчик</h6>
             <p class="card__characteristics">Рост 30 см, вес 200 г</p>
-            <span class="card__price">1 200 руб.</span>
-            <a href="cart.html"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            <div>
+              <span class="card__price">1 200 руб.</span>
+              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            </div>
+
           </div>
         </div>
 
         <div class="catalog__card card">
-          <img class="card__img" src="img/photo-bowl-mobile@1x.jpg" alt="Вязаный тазик, в который белье постельное не поместится. Разве что вертиканьно." width="260" height="195">
+          <a href="#">
+            <img class="card__img" src="img/photo-bowl-mobile@1x.jpg" alt="Вязаный тазик, в который белье постельное не поместится. Разве что вертиканьно.">
+          </a>
           <div class="card__description">
             <h6 class="card__title">Корзинка для белья</h6>
             <p class="card__characteristics">Диаметр 15 см, высота 10 см</p>
-            <span class="card__price">690 руб.</span>
-            <a href="cart.html"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            <div>
+              <span class="card__price">690 руб.</span>
+              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            </div>
           </div>
         </div>
 
         <div class="catalog__card card">
-          <img class="card__img" src="img/photo-toys-mobile@1x.jpg" alt="Чуть меньше мусорки и покрасиве. Вы ведь не будете ставить мусорку себе на стол на видное место? А это - будете!" width="260" height="195">
+          <a href="#">
+            <img class="card__img" src="img/photo-toys-mobile@1x.jpg" alt="Чуть меньше мусорки и покрасиве. Вы ведь не будете ставить мусорку себе на стол на видное место? А это - будете!">
+          </a>
           <div class="card__description">
             <h6 class="card__title">Большая корзинка для игрушек</h6>
             <p class="card__characteristics">Диаметр 30 см, высота 30 см</p>
-            <hr>
-            <span class="card__price">1 500 руб.</span>
-            <a href="cart.html"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            <div>
+              <span class="card__price">1 500 руб.</span>
+              <a href="#"><img src="img/icon-cart.svg" alt="Добавитьв корзину"></a>
+            </div>
           </div>
         </div>
       </div>
