--- a/source/form.html
+++ b/source/form.html
@@ -29,57 +29,61 @@
     </header>
     <main class="main">
       <h1 class="main__title">Вязание на заказ</h1>
-      <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="form" accept-charset="utf-8">
+      <form class="main__form form" method="post" action="https://echo.htmlacademy.ru" autocomplete="on" name="form" id="knitting_form" accept-charset="utf-8">
         <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами чтобы уточнить детали.</p>
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">Тип</legend>
-          <label><input class="form__radio" type="radio" checked>Аксессуар для  интерьера</label>
-          <label><input class="form__radio" type="radio">Детская игрушка</label>
+          <input class="form__radio" type="radio" form="knitting_form" id="knitting_accessories" checked>
+          <label class="form__lbl-checbx">Аксессуар для  интерьера</label>
+          <input class="form__radio" type="radio" form="knitting_form" id="knitting_toys">
+          <label class="form__lbl-checbx">Детская игрушка</label>
         </fieldset>
 
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">Цвет</legend>
-          <label><input class="form__input" type="checkbox" checked>Белый</label>
-          <label><input class="form__input" type="checkbox" checked>Серый</label>
-          <label><input class="form__input" type="checkbox">«Тиффани»</label>
-          <label><input class="form__input" type="checkbox">Черный</label>
-          <label><input class="form__input" type="checkbox">Розовый</label>
-          <label><input class="form__input" type="checkbox">Оранжевый</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_white" checked>
+          <label class="form__lbl-checbx" for="knitting_c_white">Белый</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_grey" checked>
+          <label class="form__lbl-checbx" for="knitting_c_grey">Серый</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_tiffany">
+          <label class="form__lbl-checbx" for="knitting_c_tiffany">«Тиффани»</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_black">
+          <label class="form__lbl-checbx" for="knitting_c_black">Черный</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_pink">
+          <label class="form__lbl-checbx" for="knitting_c_pink">Розовый</label>
+          <input class="form__input" type="checkbox" form="knitting_form" id="knitting_c_orange">
+          <label class="form__lbl-checbx" for="knitting_c_orange">Оранжевый</label>
         </fieldset>
 
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">ФИО</legend>
-          <label class="form__label">Имя:
-            <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" required>
-          </label>
-          <label class="form__label">Фамилия:
-            <input class="form__input-text" type="text" name="name" placeholder="Укажите фамилию*" required>
-          </label>
-          <label class="in-popup-form">Отчество:
-            <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете">
-          </label>
+          <label class="form__label" for="client_name">Имя:</label>
+          <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" form="knitting_form" id="client_name" required>
+          <label class="form__label" for="client_surname">Фамилия:</label>
+          <input class="form__input-text" type="text" name="name" placeholder="Укажите фамилию*" form="knitting_form" id="client_surname" required>
+          <label class="form__input-text" for="client_fathers">Отчество:</label>
+          <input class="form__input-text" type="text" name="name" placeholder="Отчество, если желаете" form="knitting_form" id="client_fathers">
         </fieldset>
 
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">тел</legend>
-          <label><input class="form__input-text" type="tel" id="phone" name="phone"
-            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*"
-            required></label>
+          <label for="client_tel"></label>
+          <input class="form__input-text" type="tel" name="phone"
+          pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" placeholder="+7 ХХХ ХХХ ХХ ХХ*" form="knitting_form" id="client_tel" required>
         </fieldset>
 
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">E-mail</legend>
-          <label><input class="form__input-text" type="email" placeholder="Ваш Email*" required></label>
+          <label for="client_email"></label>
+          <input class="form__input-text" type="email" placeholder="Ваш Email*" form="knitting_form" id="client_email" required>
         </fieldset>
 
         <fieldset class="form__fieldset fieldset">
           <legend class="fieldset-legend">Доп</legend>
-          <label>Текст письма:
-              <textarea class="form__input-text" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-            </label>
+          <textarea class="form__input-text" name="text" rows="3" placeholder="Опишите все ваши пожелания к заказу" form="knitting_form" id="client_comment"></textarea>
         </fieldset>
         <span class="form__note">*Поля обязательны для заполнения</span>
-        <button class="form__btn btn" type="submit" form="form">ОТПРАВИТЬ ЗАКАЗ</button>
+        <button class="form__btn btn" type="submit" form="knitting_form">ОТПРАВИТЬ ЗАКАЗ</button>
       </form>
     </main>
     <footer class="footer">
